--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -213,6 +213,7 @@
     <ClInclude Include="..\Public\Grid.h" />
     <ClInclude Include="..\public\HpBar.h" />
     <ClInclude Include="..\public\Idle_Player.h" />
+    <ClInclude Include="..\public\ImpactGround.h" />
     <ClInclude Include="..\Public\InstanceEffectFire.h" />
     <ClInclude Include="..\public\Inventory.h" />
     <ClInclude Include="..\public\Item.h" />
@@ -322,6 +323,7 @@
     <ClCompile Include="..\Private\Grid.cpp" />
     <ClCompile Include="..\private\HpBar.cpp" />
     <ClCompile Include="..\private\Idle_Player.cpp" />
+    <ClCompile Include="..\private\ImpactGround.cpp" />
     <ClCompile Include="..\Private\InstanceEffectFire.cpp" />
     <ClCompile Include="..\private\Inventory.cpp" />
     <ClCompile Include="..\private\Item.cpp" />
