--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -304,6 +304,9 @@
     <ClInclude Include="..\Public\EffectEAFire.h">
       <Filter>02.GameObjects\Character\Enemy\WaterEA</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\ImpactGround.h">
+      <Filter>05.Effect\PlayerEffect\ImpactGround</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -593,6 +596,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\EffectEAFire.cpp">
       <Filter>02.GameObjects\Character\Enemy\WaterEA</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\ImpactGround.cpp">
+      <Filter>05.Effect\PlayerEffect\ImpactGround</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -930,6 +936,9 @@
     </Filter>
     <Filter Include="05.Effect\PlayerEffect\ShoulderAtk">
       <UniqueIdentifier>{3140871f-e41a-4c39-bccb-47b630ed52cb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\PlayerEffect\ImpactGround">
+      <UniqueIdentifier>{ce0654e4-fba6-47a2-b31a-dae9571069ba}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
