--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -195,6 +195,7 @@
     <ClInclude Include="..\Public\EffectBlood.h" />
     <ClInclude Include="..\Public\EffectDust.h" />
     <ClInclude Include="..\Public\EffectEAFire.h" />
+    <ClInclude Include="..\Public\EffectFireBall.h" />
     <ClInclude Include="..\Public\EffectFly.h" />
     <ClInclude Include="..\Public\EffectFlyLaser.h" />
     <ClInclude Include="..\Public\EffectGrab.h" />
@@ -207,6 +208,7 @@
     <ClInclude Include="..\public\Equipment.h" />
     <ClInclude Include="..\public\EventCheck.h" />
     <ClInclude Include="..\Public\Flogas.h" />
+    <ClInclude Include="..\Public\FlogasDunDoor.h" />
     <ClInclude Include="..\public\Gold.h" />
     <ClInclude Include="..\public\Glove.h" />
     <ClInclude Include="..\public\GoldAxe.h" />
@@ -304,6 +306,7 @@
     <ClCompile Include="..\Private\EffectBlood.cpp" />
     <ClCompile Include="..\Private\EffectDust.cpp" />
     <ClCompile Include="..\Private\EffectEAFire.cpp" />
+    <ClCompile Include="..\Private\EffectFireBall.cpp" />
     <ClCompile Include="..\Private\EffectFly.cpp" />
     <ClCompile Include="..\Private\EffectFlyLaser.cpp" />
     <ClCompile Include="..\Private\EffectGrab.cpp" />
@@ -316,6 +319,7 @@
     <ClCompile Include="..\private\Equipment.cpp" />
     <ClCompile Include="..\private\EventCheck.cpp" />
     <ClCompile Include="..\Private\Flogas.cpp" />
+    <ClCompile Include="..\Private\FlogasDunDoor.cpp" />
     <ClCompile Include="..\private\Gold.cpp" />
     <ClCompile Include="..\private\Glove.cpp" />
     <ClCompile Include="..\private\GoldAxe.cpp" />
