--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -298,11 +298,17 @@
     <ClInclude Include="..\public\ShoulerAtk.h">
       <Filter>05.Effect\PlayerEffect\ShoulderAtk</Filter>
     </ClInclude>
-    <ClInclude Include="..\Public\EffectEAFire.h">
-      <Filter>02.GameObjects\Character\Enemy\WaterEA</Filter>
-    </ClInclude>
     <ClInclude Include="..\Public\WaterEA.h">
       <Filter>02.GameObjects\Character\Enemy\WaterEA</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\EffectFireBall.h">
+      <Filter>05.Effect\FlogasDungeon\WaterEA\FireBall</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\EffectEAFire.h">
+      <Filter>05.Effect\FlogasDungeon\WaterEA</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\FlogasDunDoor.h">
+      <Filter>02.GameObjects\Map\Door</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -588,11 +594,17 @@
     <ClCompile Include="..\private\ShoulerAtk.cpp">
       <Filter>05.Effect\PlayerEffect\ShoulderAtk</Filter>
     </ClCompile>
-    <ClCompile Include="..\Private\EffectEAFire.cpp">
-      <Filter>02.GameObjects\Character\Enemy\WaterEA</Filter>
-    </ClCompile>
     <ClCompile Include="..\Private\WaterEA.cpp">
       <Filter>02.GameObjects\Character\Enemy\WaterEA</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\EffectFireBall.cpp">
+      <Filter>05.Effect\FlogasDungeon\WaterEA\FireBall</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\EffectEAFire.cpp">
+      <Filter>05.Effect\FlogasDungeon\WaterEA</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\FlogasDunDoor.cpp">
+      <Filter>02.GameObjects\Map\Door</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -930,6 +942,15 @@
     </Filter>
     <Filter Include="05.Effect\PlayerEffect\ShoulderAtk">
       <UniqueIdentifier>{3140871f-e41a-4c39-bccb-47b630ed52cb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\WaterEA">
+      <UniqueIdentifier>{a5f911b9-ee32-4e45-8c22-04b13ab4bded}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\WaterEA\FireBall">
+      <UniqueIdentifier>{1356775d-6e89-4ee5-a184-4b28664a345c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObjects\Map\Door">
+      <UniqueIdentifier>{9a197bdb-196e-4fff-ae1a-15516856e85e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
