--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -21,6 +21,38 @@ GameObjects:
       Specular: [1, 1, 1, 1]
     RenderGroup: 1
     FrustumRange: 1
+  - Name: E_FireBall
+    UUID: 7340158233290813910
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 2
+    BillBord: true
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [11.3099327, -0, 0]
+      Scale: [0.999687016, 0.999992311, 0.9996382]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Diffuse\FX_fireball.dds
+      TextureNoisePath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
   - Name: WaterEA
     UUID: 6269375272436398037
     Active: true
@@ -32,7 +64,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, 0, 0]
       Rotation: [-179.999893, 71.0184402, -179.999893]
-      Scale: [4, 4, 4]
+      Scale: [5, 5, 5]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Monster\WaterEA\
       MeshFileName: waterEA.fbx
@@ -41,7 +73,7 @@ GameObjects:
     RenderGroup: 1
     FrustumRange: 10
   - Name: Empty Object
-    UUID: 7340158233290813910
+    UUID: 3132659797345281354
     Active: true
     Layer: Default
     Instancing: false
@@ -49,14 +81,14 @@ GameObjects:
     PassIndex: 2
     BillBord: false
     Com_Transform:
-      Translation: [0, 0, 0]
+      Translation: [1.05980563, 0, 0]
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
     Com_VIBuffer:
       {}
     Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Diffuse\FX_fireball.dds
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_fireball.dds
+      TextureMaskPath: ""
       TextureNoisePath: ""
       ScrollSpeedX: [0, 0, 0]
       ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
