--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -150,8 +150,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.55694079, -0.13206704, 1.43441713]
-      Rotation: [3.34863782, -45.4148483, -1.52031973e-07]
-      Scale: [0.0281551741, 0.240652964, 0.198110014]
+      Rotation: [8.02270412, -82.1406784, -7.80464461e-07]
+      Scale: [0.0266470686, 0.230398983, 0.197133005]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -251,7 +251,7 @@ GameObjects:
     PassIndex: 9
     BillBord: false
     Com_Transform:
-      Translation: [2, 0, 2]
+      Translation: [1.81795645, 0.0242713057, 1.84265268]
       Rotation: [-94.9576187, 40.5885925, 172.405746]
       Scale: [0.999814332, 0.616544724, 1.48660636]
     Com_Model:
@@ -358,7 +358,7 @@ GameObjects:
     Com_Transform:
       Translation: [2, 0, 2]
       Rotation: [-90, -0, 0]
-      Scale: [0.499756664, 0.49999848, 0.50000006]
+      Scale: [0.499744654, 0.49999848, 0.50000006]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: BombBeam3.fbx
