--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -215,6 +215,7 @@
     <ClInclude Include="..\Public\Grid.h" />
     <ClInclude Include="..\public\HpBar.h" />
     <ClInclude Include="..\public\Idle_Player.h" />
+    <ClInclude Include="..\public\ImpactBeam.h" />
     <ClInclude Include="..\public\ImpactGround.h" />
     <ClInclude Include="..\Public\InstanceEffectFire.h" />
     <ClInclude Include="..\public\Inventory.h" />
@@ -327,6 +328,7 @@
     <ClCompile Include="..\Private\Grid.cpp" />
     <ClCompile Include="..\private\HpBar.cpp" />
     <ClCompile Include="..\private\Idle_Player.cpp" />
+    <ClCompile Include="..\private\ImpactBeam.cpp" />
     <ClCompile Include="..\private\ImpactGround.cpp" />
     <ClCompile Include="..\Private\InstanceEffectFire.cpp" />
     <ClCompile Include="..\private\Inventory.cpp" />
