--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="..\public\Idle_Player.h" />
     <ClInclude Include="..\public\ImpactBeam.h" />
     <ClInclude Include="..\public\ImpactGround.h" />
+    <ClInclude Include="..\public\ImpactShort.h" />
     <ClInclude Include="..\Public\InstanceEffectFire.h" />
     <ClInclude Include="..\public\Inventory.h" />
     <ClInclude Include="..\public\Item.h" />
@@ -330,6 +331,7 @@
     <ClCompile Include="..\private\Idle_Player.cpp" />
     <ClCompile Include="..\private\ImpactBeam.cpp" />
     <ClCompile Include="..\private\ImpactGround.cpp" />
+    <ClCompile Include="..\private\ImpactShort.cpp" />
     <ClCompile Include="..\Private\InstanceEffectFire.cpp" />
     <ClCompile Include="..\private\Inventory.cpp" />
     <ClCompile Include="..\private\Item.cpp" />
