--- a/Assets/Scenes/TestRoom_Effect_Jun.yaml
+++ b/Assets/Scenes/TestRoom_Effect_Jun.yaml
@@ -1,51 +1,218 @@
 Scene: Untitled
 GameObjects:
-  - Name: Direction
-    UUID: 14881628268781159922
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Object
-    PassIndex: 0
-    NumOBB: 0
-    Com_Transform:
-      Translation: [-0.943716288, 16.4591846, -58.1869354]
-      Rotation: [19.3969994, -0, 0]
-      Scale: [10, 9.99999809, 9.99999809]
-    Com_Light:
-      Type: 0
-      Range: 10
-      Angle: 20
-      Diffuse: [1, 1, 1, 1]
-      Ambient: [1, 1, 1, 1]
-      Specular: [1, 1, 1, 1]
-    RenderGroup: 1
-    FrustumRange: 1
-  - Name: Empty Object
-    UUID: 12592849602201333702
+  - Name: FireSlash
+    UUID: 6257681386015741603
     Active: true
     Layer: Default
     Instancing: false
     Type: Effect
-    PassIndex: 4
+    PassIndex: 10
     BillBord: false
     Com_Transform:
-      Translation: [1.08928335, 1.73862076, 5.2685914]
-      Rotation: [89.9999466, -0, 90]
-      Scale: [0.999976039, 0.994371891, 0.799995959]
+      Translation: [0, 0.86231184, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
     Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: dome.fbx
+      MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
+      MeshFileName: bsktrail_005.fbx
       HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\LV_ElRano_Object_SpermaPropB_E_LBR.dds
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
     Effect_Setting:
       TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Diffuse\FX_Trail_012_TEX_CJH.tga
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AEAura_001_TEX_PHS.tga
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Wave.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\Noise01.dds
       ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.20000005, 1.20000005, 0]
-      Distortion1: [1, 1]
+      ScrollSpeedY: [0, 1, 0]
+      Distortion1: [0.100000001, 0.200000003]
       Distortion2: [0.100000001, 0.300000012]
       Distortion3: [0.100000001, 0.100000001]
       DistortionScale: 0.800000012
       DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 3
+      FadeOutStratTime: 2
+      FadeIn: true
+      FadeInDuration: 1
+      FadeInStratTime: 0
+      EffectDuration: 3
+    Children:
+      - 15508972454785851554
+  - Name: Slash_Ringe
+    UUID: 15508972454785851554
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 10
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.486717224, 0.4211739, 0.252341121]
+      Rotation: [-11.8002529, -38.4352188, 14.5525885]
+      Scale: [0.499996752, 0.100999899, 0.199999943]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
+      MeshFileName: TwistMesh.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\04_SwirlDistort_Tx.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\test2.jpg
+      ScrollSpeedX: [1, 0, 0]
+      ScrollSpeedY: [1, 1, 0]
+      Distortion1: [0.100000001, 0.5]
+      Distortion2: [1, 1]
+      Distortion3: [1, 1]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 3
+      FadeOutStratTime: 2
+      FadeIn: true
+      FadeInDuration: 1
+      FadeInStratTime: 0
+      EffectDuration: 3
+  - Name: BurstFire
+    UUID: 11713522519489596904
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 11
+    BillBord: false
+    Com_Transform:
+      Translation: [1.138026, 1.28989744, 0.962560356]
+      Rotation: [0, -0, 0]
+      Scale: [0.400000006, 0.100000001, 0.200000003]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
+      MeshFileName: longMesh_01.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\019.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_wind_003_TEX_CJH.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\Noise02.dds
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [0.5, 1.5, 0]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.200000003]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 1.70000005
+      FadeOutStratTime: 1.20000005
+      FadeIn: true
+      FadeInDuration: 1
+      FadeInStratTime: 0
+      EffectDuration: 1.70000005
+    Children:
+      - 8616304515364961595
+      - 10972809127800823377
+      - 2331934001768822582
+  - Name: Burst
+    UUID: 8616304515364961595
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 11
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.0878797472, -0.200000003, 0.0206456184]
+      Rotation: [0, -0, 0]
+      Scale: [0.5, 0.800000012, 0.5]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
+      MeshFileName: TwCylin_03.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\021.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Wind001_TEX_HKJ.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_smoke_006_TEX_CJH.tga
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 1, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 0.699999988
+      FadeOutStratTime: 0.300000012
+      FadeIn: true
+      FadeInDuration: 0.300000012
+      FadeInStratTime: 0
+      EffectDuration: 0.699999988
+  - Name: SideFire01
+    UUID: 10972809127800823377
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 11
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.0744034201, 0.00357870758, -0.0862821564]
+      Rotation: [0, -53.9999962, 0]
+      Scale: [0.700000167, 0.100000001, 0.700000167]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
+      MeshFileName: longMesh_01.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\019.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\T_Maria_Flame_MASK_04.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\Noise02.dds
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2, 0]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 1.5
+      FadeOutStratTime: 1
+      FadeIn: true
+      FadeInDuration: 1
+      FadeInStratTime: 0
+      EffectDuration: 1.5
+  - Name: SideFire02
+    UUID: 2331934001768822582
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 11
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.106535837, 0.163090795, -0.108346798]
+      Rotation: [90, 29.299984, 0]
+      Scale: [0.499961197, 0.100000024, 0.5]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\Flogas\
+      MeshFileName: longMesh_01.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\019.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_pajang_002_TEX_HKB.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire_003_TEX_CJH_tile.tga
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [0, 2, 0]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 1.5
+      FadeOutStratTime: 1
+      FadeIn: true
+      FadeInDuration: 1
+      FadeInStratTime: 0
+      EffectDuration: 1.5
