--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -150,8 +150,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.55694079, -0.13206704, 1.43441713]
-      Rotation: [-176.805847, -88.6435699, -179.999985]
-      Scale: [0.0227247383, 0.235442847, 0.189696267]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [0.0227156002, 0.233742565, 0.189608574]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -358,7 +358,7 @@ GameObjects:
     Com_Transform:
       Translation: [2, 0, 2]
       Rotation: [-90, -0, 0]
-      Scale: [0.499744534, 0.49999848, 0.50000006]
+      Scale: [0.499744356, 0.49999848, 0.50000006]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: BombBeam3.fbx
