--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -322,6 +322,9 @@
     <ClInclude Include="..\public\ImpactShort.h">
       <Filter>05.Effect\PlayerEffect\ImpactShort</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\Skills.h">
+      <Filter>04.UI\SkillIcon\SkillInfo</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -629,6 +632,9 @@
     </ClCompile>
     <ClCompile Include="..\private\ImpactShort.cpp">
       <Filter>05.Effect\PlayerEffect\ImpactShort</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\Skills.cpp">
+      <Filter>04.UI\SkillIcon\SkillInfo</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -984,6 +990,9 @@
     </Filter>
     <Filter Include="05.Effect\PlayerEffect\ImpactShort">
       <UniqueIdentifier>{ddb7f3b1-e5b6-49d8-b712-ce988382b4fd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04.UI\SkillIcon\SkillInfo">
+      <UniqueIdentifier>{60fb8895-ed32-4c1a-b06f-26310100b3a7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
