--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -322,6 +322,9 @@
     <ClInclude Include="..\public\ImpactShort.h">
       <Filter>05.Effect\PlayerEffect\ImpactShort</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\SlashWave.h">
+      <Filter>05.Effect\FlogasDungeon</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -629,6 +632,9 @@
     </ClCompile>
     <ClCompile Include="..\private\ImpactShort.cpp">
       <Filter>05.Effect\PlayerEffect\ImpactShort</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\SlashWave.cpp">
+      <Filter>05.Effect\FlogasDungeon</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
