--- a/Assets/Scenes/TestRoom_Effect_Jun.yaml
+++ b/Assets/Scenes/TestRoom_Effect_Jun.yaml
@@ -22,7 +22,7 @@ GameObjects:
       TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Wave.png
       TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\Noise01.dds
       ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [0, 1, 0]
+      ScrollSpeedY: [0, 5, 0]
       Distortion1: [0.100000001, 0.200000003]
       Distortion2: [0.100000001, 0.300000012]
       Distortion3: [0.100000001, 0.100000001]
@@ -35,6 +35,10 @@ GameObjects:
       FadeInDuration: 1
       FadeInStratTime: 0
       EffectDuration: 3
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
     Children:
       - 15508972454785851554
   - Name: Slash_Ringe
@@ -58,8 +62,8 @@ GameObjects:
       TextureDiffusePath: ""
       TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\04_SwirlDistort_Tx.png
       TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\test2.jpg
-      ScrollSpeedX: [1, 0, 0]
-      ScrollSpeedY: [1, 1, 0]
+      ScrollSpeedX: [4, 0, 0]
+      ScrollSpeedY: [4, 4, 0]
       Distortion1: [0.100000001, 0.5]
       Distortion2: [1, 1]
       Distortion3: [1, 1]
@@ -72,6 +76,10 @@ GameObjects:
       FadeInDuration: 1
       FadeInStratTime: 0
       EffectDuration: 3
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
   - Name: BurstFire
     UUID: 11713522519489596904
     Active: true
@@ -107,6 +115,10 @@ GameObjects:
       FadeInDuration: 1
       FadeInStratTime: 0
       EffectDuration: 1.70000005
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
     Children:
       - 8616304515364961595
       - 10972809127800823377
@@ -146,6 +158,10 @@ GameObjects:
       FadeInDuration: 0.300000012
       FadeInStratTime: 0
       EffectDuration: 0.699999988
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
   - Name: SideFire01
     UUID: 10972809127800823377
     Active: true
@@ -181,6 +197,10 @@ GameObjects:
       FadeInDuration: 1
       FadeInStratTime: 0
       EffectDuration: 1.5
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
   - Name: SideFire02
     UUID: 2331934001768822582
     Active: true
@@ -216,3 +236,43 @@ GameObjects:
       FadeInDuration: 1
       FadeInStratTime: 0
       EffectDuration: 1.5
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+  - Name: Empty Object
+    UUID: 12895974190404613629
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 2
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FireBall8x8.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Shock_004_Tex_KKJ.tga
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Mask\FX_Shock_New04_Tx.tga
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 8
+      SpriteNumY: 8
+      SpriteTotal: 64
+      SpriteSpeed: 20
