--- a/Assets/Scenes/Dungeon1_SY.yaml
+++ b/Assets/Scenes/Dungeon1_SY.yaml
@@ -59,67 +59,30 @@ GameObjects:
       Equipment: false
     RenderGroup: 1
     FrustumRange: 50
-  - Name: E_EAFireBall
-    UUID: 1410864695008113936
+  - Name: E_MeteoFire
+    UUID: 11029842269310638064
     Active: true
     Layer: Default
     Instancing: false
     Type: Effect
-    PassIndex: 1
+    PassIndex: 2
     BillBord: true
     Com_Transform:
-      Translation: [0.00537901092, 0.213814706, 0.084786281]
-      Rotation: [20.9324837, -6.97170019, -2.15033012e-07]
-      Scale: [0.929242134, 1.00371122, 0.989151418]
+      Translation: [0, 0.143458739, 0.0286916774]
+      Rotation: [11.289588, 4.47654581, 1.60572455e-07]
+      Scale: [1.60324669, 1.5027113, 1.20671892]
     Com_VIBuffer:
       {}
     Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\014.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_BoomMask_02.tga
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AESmoke_001_PS_JYW.tga
-      ScrollSpeedX: [-0.100000001, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [-0.300000012, 0.200000003]
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Explosion1.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [0, 0, 0]
+      Distortion1: [0.100000001, 0.200000003]
       Distortion2: [0.100000001, 0.300000012]
       Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.300000012
-      DistortionBias: 0.300000012
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-    Children:
-      - 12959098929675823599
-  - Name: Empty Object
-    UUID: 12959098929675823599
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 4
-    BillBord: false
-    Com_Transform:
-      Translation: [0.0370278656, -0.243990928, 0.0160817206]
-      Rotation: [0, -0, 0]
-      Scale: [0.0500000007, 0.0500000007, 0.0500000007]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: FireBallMesh.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\014.dds
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Flame_01_mask_Tex.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire01_Step_TEX.tga
-      ScrollSpeedX: [0.300000012, 0.600000024, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.899999976, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 1.10000002
+      DistortionScale: 0.800000012
       DistortionBias: 0.5
       FadeOut: false
       FadeOutDuration: 0
@@ -128,3 +91,43 @@ GameObjects:
       FadeInDuration: 0
       FadeInStratTime: 0
       EffectDuration: 0
+      SpriteNumX: 5
+      SpriteNumY: 5
+      SpriteTotal: 25
+      SpriteSpeed: 15
+  - Name: E_Smoke
+    UUID: 5549501857383829330
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 2
+    BillBord: true
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [11.289588, 4.47654629, 1.60572441e-07]
+      Scale: [1.49920607, 1.5000881, 1.50429618]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Smoke4.dds
+      TextureMaskPath: ""
+      TextureNoisePath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 5
+      SpriteNumY: 5
+      SpriteTotal: 25
+      SpriteSpeed: 30
